# dasresolve

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
packaging/linux/: install.sh
packaging/mac/: Info.plist.in
packaging/win/: installer.iss
src/core/: Analyser.cpp  Analyser.h  AutoMatch.cpp  AutoMatch.h  AutoMatchTest.cpp  ColorSpace.cpp  ColorSpace.h  FrameRange.cpp  FrameRange.h  ResponseCurve.cpp  ResponseCurve.h  Voronoi.cpp  Voronoi.h
src/kernels/: KernelDispatch.cpp  KernelDispatch.h  Kernels.h
src/kernels/cpu/: AnalyserCPU.cpp  GrainApplyCPU.cpp  VoronoiCPU.cpp
src/kernels/cuda/: AnalyserCuda.cu  GrainApplyCuda.cu  VoronoiCuda.cu
src/kernels/metal/: AnalyserMetal.mm  GrainApplyMetal.mm  VoronoiMetal.mm
src/kernels/opencl/: AnalyserOpenCL.cpp  GrainApplyOpenCL.cpp  VoronoiOpenCL.cpp
src/plugin/: DasGrainFactory.cpp  DasGrainFactory.h  DasGrainInteract.cpp  DasGrainInteract.h  DasGrainPlugin.cpp  DasGrainPlugin.h  DegrainHelperPlugin.cpp  DegrainHelperPlugin.h  Params.cpp  Params.h  PluginRegistration.cpp
tests/e2e/: devloop.sh  gen_fixtures.py  probe_resolve.py  run_all.sh  run_e2e.py  setup_dev.sh
tests/unit/: CMakeLists.txt  main.cpp  test_analyser.cpp  test_color_space.cpp  test_frame_range.cpp  test_golden.cpp  test_grain_apply.cpp  test_harness.h  test_response_curve.cpp  test_scatter.cpp  test_voronoi.cpp
